Fixed header z-index.

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=VT323&display=swap');
 
+.navigation-menu {
+  z-index: 99;
+}
+
 .logo-sa {
   font-family: 'VT323', monospace;
   font-size: 2rem;
@@ -50,6 +54,7 @@ a:hover {
   padding: 0.75rem;
   display: flex;
   justify-content: center;
+  z-index: -1;
 }
 
 .image-sa {
